<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">Estoy Listo</string>
    <string name="app_nav_home_label">Estoy Listo</string>
    <string name="camara_label">Test Camara</string>
    <string name="take_photo_help">ayuda de foto</string>
    <string name="content_category_label">Agregar elemento</string>
    <string name="llamarA">Llamar a Pablo</string>
    <string name="action_settings">Settings</string>

    <string-array name="at_array">
        <item>N/A</item>
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sabado</item>
        <item>Domingo</item>
    </string-array>

    <string name="at_label_1">Titulo</string>
    <string name="at_hint">Nombre de la tarea</string>
    <string name="at_checkbox_1">Es semanal?</string>
    <string name="at_label_2">Icono de la tarea</string>
    <string name="at_boton">Ir al primer paso</string>

</resources>