<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp" >

    <TextView
        android:id="@+id/at_label_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/at_label_1" />

    <EditText
        android:id="@+id/at_tarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/at_hint"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/at_checkbox_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/at_checkbox_1" />

    <Spinner
        android:id="@+id/at_spinner_dia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/at_label_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/at_label_2" />

    <Spinner
        android:id="@+id/at_spinner_icono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/at_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/at_boton" />

</LinearLayout>